# launchy

./: .build.config  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  build.ps1  config.h.in  vcpkg.json
Launchy/ConsoleView/: CMakeLists.txt
Launchy/ConsoleView/src/: main.cpp
Launchy/Controller/: CMakeLists.txt
Launchy/Controller/include/: controller.hpp
Launchy/Controller/src/: controller.cpp
Launchy/Controller/test/: test.cpp
Launchy/Model/: CMakeLists.txt
Launchy/Model/include/: gameInfo.hpp  model.hpp  modelConfiguration.hpp
Launchy/Model/src/: model.cpp
Launchy/Model/test/: test.cpp
docs/: index.html  manifest
src/: CMakeLists.txt  VersionUpdate.cpp  config.h  main.cpp  patcher.cpp
src/Controller/: IController.h  SDL_Controller.cpp  SDL_Controller.h
src/Model/: ButtonFactory.h  ButtonLogic.cpp  ButtonLogic.h  IModel.h  Launcher.cpp  Launcher.h  NetworkManager.cpp  NetworkManager.h
src/View/: BaseButton.cpp  BaseButton.h  ButtonStyle.h  ButtonViewTest.cpp  ButtonViewTest.h  IButtonView.h  IView.h  NavigationBar.cpp  NavigationBar.h  SDL_View.cpp  SDL_View.h  SplashArt.cpp  SplashArt.h  Texture.cpp  Texture.h
